# Gemma4-Quantizer

./: README.md  pyproject.toml
gemma4_quant/: __init__.py  calibration.py  cli.py  detector.py  quantizer.py  validation.py
gemma4_quant/exporters/: __init__.py  gguf_export.py  safetensors_export.py
gemma4_quant/plugins/: __init__.py  awq_plugin.py  gptq_plugin.py
gemma4_quantizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llama.cpp/tools/server/webui/: package-lock.json  package.json
scripts/: quantize_with_llamacpp.sh
tests/: test_quantizer.py
