[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma4-quantizer"
version = "0.1.0"
description = "Native 3D tensor quantization for Google Gemma 4 MoE models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "gemma4-quantizer contributors"},
]
keywords = ["quantization", "gemma", "moe", "llm", "3d-tensor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
calibration = [
    "datasets>=2.14.0",
    "sentencepiece>=0.1.99",
]
gptq = [
    "auto-gptq>=0.7.0",
]
awq = [
    "autoawq>=0.2.0",
]
gguf = [
    "gguf>=0.6.0",
]
all = [
    "gemma4-quantizer[calibration,gptq,awq,gguf]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
quantize-gemma4 = "gemma4_quant.cli:main"

[project.urls]
Homepage = "https://github.com/gemma4-quantizer/gemma4-quantizer"
Issues = "https://github.com/gemma4-quantizer/gemma4-quantizer/issues"

[tool.setuptools.packages.find]
include = ["gemma4_quant*"]
